import commands dynamically

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "UNLICENSED",
   "dependencies": {
     "chalk": "^4.1.0",
-    "inquirer": "^7.3.3"
+    "commander": "^6.2.1",
+    "inquirer": "^7.3.3",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "@types/inquirer": "^7.3.1"
+    "@types/inquirer": "^7.3.1",
+    "@types/lodash": "^4.14.165"
   }
 }
