--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "version": "0.0.1",
   "description": "A command line tool to view, publish and take down demo sites.",
-  "main": "index.js",
+  "bin": {
+    "necro": "./index.ts"
+  },
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "Luiz \"Felds\" Liscia",
   "license": "UNLICENSED",
@@ -13,7 +17,8 @@
     "chalk": "^4.1.0",
     "commander": "^6.2.1",
     "inquirer": "^7.3.3",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
