--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
-    "@types/lodash": "^4.14.165"
+    "@types/lodash": "^4.14.165",
+    "@types/node": "^14.14.14"
   }
 }
