--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "chalk": "^4.1.0",
     "commander": "^6.2.1",
     "inquirer": "^7.3.3",
-    "lodash": "^4.17.20",
-    "typescript": "^4.1.3"
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
     "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.14"
+    "@types/node": "^14.14.14",
+    "typescript": "^4.1.3"
   }
 }
