--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.1",
   "description": "A command line tool to view, publish and take down demo sites.",
   "bin": {
-    "necro": "./dist/index.js"
+    "necro": "dist/index.js"
   },
   "files": [
     "dist/"
   ],
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
