--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"No test specified\" && exit 0",
     "build": "tsc"
   },
   "author": "Luiz \"Felds\" Liscia",
