--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,8 +1,9 @@
 name: Node.js Package
 
 on:
+  workflow_dispatch: {}
   release:
-    types: [created, workflow_dispatch]
+    types: [created]
 
 jobs:
   build:
@@ -11,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
       - run: npm ci
       - run: npm test
 
@@ -25,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
       - run: npm publish
