--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dist/"
   ],
   "main": "dist/index.js",
+  "bin": {
+    "necro": "dist/index.js"
+  },
   "scripts": {
     "test": "echo \"No test specified\" && exit 0",
     "build": "tsc"
