--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "fast-glob": "^3.2.7",
     "inquirer": "^7.3.3",
     "lodash": "^4.17.20",
+    "mime-types": "^2.1.34",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
     "@types/lodash": "^4.14.165",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^14.14.14",
     "ts-json-schema-generator": "^0.97.0",
     "typescript": "^4.1.3"
