--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "_prepublishOnly": "npm run build",
     "link": "npm run build && npm link",
     "build": "rm -fr dist/* && tsc && chmod +x dist/index.js",
-    "generate-config-schema": "ts-json-schema-generator --path src/@types/config.d.ts --expose all --out src/@schema/config.schema.json"
+    "generate-config-schema": "ts-json-schema-generator --additional-properties true --path src/@types/config.d.ts --expose all --out src/@schema/config.schema.json"
   },
   "author": "Luiz \"Felds\" Liscia",
   "license": "UNLICENSED",
