--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.1046.0",
     "chalk": "^4.1.0",
     "commander": "^6.2.1",
+    "date-fns": "^2.28.0",
     "fast-glob": "^3.2.7",
     "inquirer": "^7.3.3",
     "lodash": "^4.17.20",
